<resources>
    <string name="app_name">FortUJI HernandezSolanasDario</string>
    <string name="enter_text">Enter Text</string>

    <string name="main_title">FortUJI</string>

    <string name="initialNews">News</string>
    <string name="initialCosmetics">Cosmetics</string>

    <string name="news_title">News</string>

    <string name="search_id">Id:</string>
    <string name="search_name">Name:</string>
    <string name="search_type">Type:</string>
    <string name="search_rarity">Rarity:</string>
    <string name="search_added">Added:</string>

    <string name="search_images">Images</string>
    <string name="search_video">Video</string>

    <string name="item_search_title">Search Cosmetics</string>
    <string name="item_search_button">Search</string>
</resources>